
FILE(GLOB_RECURSE
    ATK_EQ_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_EQ_HEADERS
    *.h
)

SOURCE_GROUP_BY_FOLDER(ATK_EQ)

include_directories(${PROJECT_SOURCE_DIR})

if(ENABLE_STATIC_LIBRARIES)
add_library(ATKEQ_static
    STATIC
    ${ATK_EQ_SRC} ${ATK_EQ_HEADERS} ${NATVIS_FILE}
)

set_target_properties (ATKEQ_static PROPERTIES
    FOLDER C++/static
)

INSTALL(TARGETS ATKEQ_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_STATIC_LIBRARIES)

if(ENABLE_SHARED_LIBRARIES)
add_definitions(-DBUILD_ATK_EQ)
add_definitions(-DATK_SHARED)

add_library(ATKEQ
    SHARED
    ${ATK_EQ_SRC} ${ATK_EQ_HEADERS} ${NATVIS_FILE}
)

set_target_properties (ATKEQ PROPERTIES
    FOLDER C++/shared
)

target_link_libraries(ATKEQ ATKTools ATKCore)

stagedebug(ATKEQ)

INSTALL(TARGETS ATKEQ
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_SHARED_LIBRARIES)

INSTALL(FILES ${ATK_EQ_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/EQ
    )
