
FILE(GLOB
    ATK_IO_SRC
    *.cpp
)

FILE(GLOB
    ATK_IO_HEADERS
    *.h
)

if(LIBSNDFILE_FOUND)
FILE(GLOB_RECURSE
    ATK_IO_LIBSNDFILE_SRC
    libsndfile/*.cpp
)

FILE(GLOB_RECURSE
    ATK_IO_LIBSNDFILE_HEADERS
    libsndfile/*.h
)

include_directories(${PROJECT_SOURCE_DIR} ${LIBSNDFILE_INCLUDE_DIR})
else(LIBSNDFILE_FOUND)
include_directories(${PROJECT_SOURCE_DIR})
endif(LIBSNDFILE_FOUND)

add_definitions(-DBUILD_ATK_IO)

add_library(ATKIO
    SHARED
    ${ATK_IO_SRC} ${ATK_IO_HEADERS}
    ${ATK_IO_LIBSNDFILE_SRC} ${ATK_IO_LIBSNDFILE_HEADERS}
)


add_library(ATKIO_static
    STATIC
    ${ATK_IO_SRC} ${ATK_IO_HEADERS}
    ${ATK_IO_LIBSNDFILE_SRC} ${ATK_IO_LIBSNDFILE_HEADERS}
)

if(LIBSNDFILE_FOUND)
target_link_libraries(ATKIO ATKCore ${LIBSNDFILE_LIBRARY})
else(LIBSNDFILE_FOUND)
target_link_libraries(ATKIO ATKCore)
endif(LIBSNDFILE_FOUND)

INSTALL(TARGETS ATKIO
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
