
FILE(GLOB
    ATK_IO_SRC
    *.cpp
)

FILE(GLOB
    ATK_IO_HEADERS
    *.h*
)

SET(ATK_IO_DEFINITIONS)
SET(ATK_IO_INCLUDE)
SET(ATK_IO_LIBRARIES ATKCore)

if(LIBSNDFILE_FOUND)
  FILE(GLOB_RECURSE
    ATK_IO_LIBSNDFILE_SRC
    libsndfile/*.cpp
  )

  FILE(GLOB_RECURSE
    ATK_IO_LIBSNDFILE_HEADERS
    libsndfile/*.h
  )

  LIST(APPEND ATK_IO_SRC ${ATK_IO_LIBSNDFILE_SRC})
  LIST(APPEND ATK_IO_HEADERS ${ATK_IO_LIBSNDFILE_HEADERS})
  LIST(APPEND ATK_IO_INCLUDE ${LIBSNDFILE_INCLUDE_DIR})
  LIST(APPEND ATK_IO_LIBRARIES ${LIBSNDFILE_LIBRARY})
endif(LIBSNDFILE_FOUND)

SET(ATK_IO_NAME ATKIO)
SET(ATK_IO_FOLDER IO)

ATK_add_library(ATK_IO)

INSTALL(FILES ${ATK_IO_LIBSNDFILE_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/IO/libsndfile
    )
