
FILE(GLOB_RECURSE
    ATK_MOCK_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_MOCK_HEADERS
    *.h
)

add_definitions(-DBUILD_ATK_MOCK)
add_definitions(-DBOOST_ALL_NO_LIB)

include_directories(${PROJECT_SOURCE_DIR})

add_library(ATKMock
    SHARED
    ${ATK_MOCK_SRC} ${ATK_MOCK_HEADERS}
)

target_link_libraries(ATKMock ATKTools ATKCore ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${FFTLIBRARIES})

INSTALL(TARGETS ATKMock
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )

add_library(ATKMock_static
    STATIC
    ${ATK_MOCK_SRC} ${ATK_MOCK_HEADERS}
)

INSTALL(TARGETS ATKMock_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )

INSTALL(FILES ${ATK_MOCK_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/Mock
    )
