
FILE(GLOB_RECURSE
    ATK_SPECIAL_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_SPECIAL_HEADERS
    *.h
)

SOURCE_GROUP_BY_FOLDER(ATK_SPECIAL)

include_directories(${PROJECT_SOURCE_DIR})

if(ENABLE_STATIC_LIBRARIES)
add_library(ATKSpecial_static
    STATIC
    ${ATK_SPECIAL_SRC} ${ATK_SPECIAL_HEADERS}
)

set_target_properties (ATKSpecial_static PROPERTIES
    FOLDER C++/static
)

INSTALL(TARGETS ATKSpecial_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_STATIC_LIBRARIES)

if(ENABLE_SHARED_LIBRARIES)
add_definitions(-DBUILD_ATK_SPECIAL)
add_definitions(-DATK_SHARED)

add_library(ATKSpecial
    SHARED
    ${ATK_SPECIAL_SRC} ${ATK_SPECIAL_HEADERS}
)

set_target_properties (ATKSpecial PROPERTIES
    FOLDER C++/shared
)

target_link_libraries(ATKSpecial ATKUtility ATKCore)

stagedebug(ATKSpecial)

INSTALL(TARGETS ATKSpecial
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_SHARED_LIBRARIES)

INSTALL(FILES ${ATK_SPECIAL_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/Special
    )
