
FILE(GLOB_RECURSE
    ATK_TOOLS_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_TOOLS_HEADERS
    *.h
)

include_directories(${PROJECT_SOURCE_DIR})

if(ENABLE_STATIC_LIBRARIES)
add_library(ATKTools_static
    STATIC
    ${ATK_TOOLS_SRC} ${ATK_TOOLS_HEADERS}
)

INSTALL(TARGETS ATKTools_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )

INSTALL(FILES ${ATK_TOOLS_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/Tools
    )
endif(ENABLE_STATIC_LIBRARIES)

if(ENABLE_SHARED_LIBRARIES)
add_definitions(-DBUILD_ATK_TOOLS)
add_definitions(-DATK_SHARED)

add_library(ATKTools
    SHARED
    ${ATK_TOOLS_SRC} ${ATK_TOOLS_HEADERS}
)

target_link_libraries(ATKTools ATKCore ${FFTLIBRARIES})

INSTALL(TARGETS ATKTools
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_SHARED_LIBRARIES)
