
FILE(GLOB_RECURSE
    ATK_UTILITY_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_UTILITY_HEADERS
    *.h
)

SOURCE_GROUP_BY_FOLDER(ATK_UTILITY)

include_directories(${PROJECT_SOURCE_DIR})

if(ENABLE_STATIC_LIBRARIES)
add_library(ATKUtility_static
    STATIC
    ${ATK_UTILITY_SRC} ${ATK_UTILITY_HEADERS}
)

set_target_properties (ATKUtility_static PROPERTIES
    FOLDER C++/static
)

INSTALL(TARGETS ATKUtility_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_STATIC_LIBRARIES)

if(ENABLE_SHARED_LIBRARIES)
add_definitions(-DBUILD_ATK_UTILITY)
add_definitions(-DATK_SHARED)

add_library(ATKUtility
    SHARED
    ${ATK_UTILITY_SRC} ${ATK_UTILITY_HEADERS}
)

set_target_properties (ATKUtility PROPERTIES
    FOLDER C++/shared
)

target_link_libraries(ATKUtility ATKCore ${FFTLIBRARIES})

stagedebug(ATKUtility)

INSTALL(TARGETS ATKUtility
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )

endif(ENABLE_SHARED_LIBRARIES)

INSTALL(FILES ${ATK_UTILITY_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/Utility
    )
