
SET(
    ATK_PYTHON_ADAPTIVE_SWIG
    main.i
)

FILE(GLOB_RECURSE
  SWIG_MODULE_Adaptive_EXTRA_DEPS
  *.i
)

list(REMOVE_ITEM SWIG_MODULE_Adaptive_EXTRA_DEPS ${ATK_PYTHON_ADAPTIVE_SWIG})

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_ADAPTIVE_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_ADAPTIVE_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(Adaptive python ${ATK_PYTHON_ADAPTIVE_SWIG})
SWIG_LINK_LIBRARIES(Adaptive ATKAdaptive ${PYTHON_LIBRARIES})

SET(
    ATK_ADAPTIVE_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Adaptive/Adaptive.py
)

INSTALL(FILES ${ATK_ADAPTIVE_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Adaptive
    )

INSTALL(TARGETS ${SWIG_MODULE_Adaptive_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Adaptive
    )

set_target_properties (${SWIG_MODULE_Adaptive_REAL_NAME} PROPERTIES
    FOLDER Python
)
