
SET(
    ATK_PYTHON_CORE_SWIG
    main.i
)

include_directories(${PROJECT_SOURCE_DIR} ${NUMPY_INCLUDE_DIRS})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_CORE_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_CORE_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(Core python ${ATK_PYTHON_CORE_SWIG})
SWIG_LINK_LIBRARIES(Core ATKCore ${PYTHON_LIBRARIES})

FILE(GLOB_RECURSE
    ATK_CORE_PYTHON_SRC
    *.py ${PROJECT_BINARY_DIR}/Python/Core/*.py
)

INSTALL(FILES ${ATK_CORE_PYTHON_SRC}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PYTHON_FOLDER}/site-packages/ATK/Core
    )

INSTALL(TARGETS ${SWIG_MODULE_Core_REAL_NAME}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PYTHON_FOLDER}/site-packages/ATK/Core
    )
