
SET(
    ATK_PYTHON_CORE_SWIG
    main.i
)

FILE(GLOB_RECURSE
  SWIG_MODULE_Core_EXTRA_DEPS
  *.i
)

list(REMOVE_ITEM SWIG_MODULE_Core_EXTRA_DEPS ${ATK_PYTHON_CORE_SWIG})

include_directories(${PROJECT_SOURCE_DIR} ${NUMPY_INCLUDE_DIRS})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_CORE_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_CORE_SWIG} PROPERTIES SWIG_FLAGS "-includeall")

SWIG_ADD_MODULE(Core python ${ATK_PYTHON_CORE_SWIG})
SWIG_LINK_LIBRARIES(Core ATKCore ${PYTHON_LIBRARIES})

SET(
    ATK_CORE_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Core/Core.py
)

INSTALL(FILES ${ATK_CORE_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Core
    )

INSTALL(TARGETS ${SWIG_MODULE_Core_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Core
    )

set_target_properties (${SWIG_MODULE_Core_REAL_NAME} PROPERTIES
    FOLDER Python
)
