
SET(
    ATK_PYTHON_DELAY_SWIG
    main.i
)

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_DELAY_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_DELAY_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(Delay python ${ATK_PYTHON_DELAY_SWIG})
SWIG_LINK_LIBRARIES(Delay ATKDelay ${PYTHON_LIBRARIES})

SET(
    ATK_DELAY_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Delay/Delay.py
)

INSTALL(FILES ${ATK_DELAY_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Delay
    )

INSTALL(TARGETS ${SWIG_MODULE_Delay_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Delay
    )

set_target_properties (${SWIG_MODULE_Delay_REAL_NAME} PROPERTIES
    FOLDER Python
)
