
SET(
    ATK_PYTHON_DISTORTION_SWIG
    main.i
)

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_DISTORTION_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_DISTORTION_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(Distortion python ${ATK_PYTHON_DISTORTION_SWIG})
SWIG_LINK_LIBRARIES(Distortion ATKDistortion ${PYTHON_LIBRARIES})

FILE(GLOB_RECURSE
    ATK_DISTORTION_PYTHON_SRC
    *.py ${PROJECT_BINARY_DIR}/Python/Distortion/*.py
)

INSTALL(FILES ${ATK_DISTORTION_PYTHON_SRC}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PYTHON_FOLDER}/site-packages/ATK/Distortion
    )

INSTALL(TARGETS ${SWIG_MODULE_Distortion_REAL_NAME}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PYTHON_FOLDER}/site-packages/ATK/Distortion
    )
