
SET(
    ATK_PYTHON_DISTORTION_SWIG
    main.i
)

FILE(GLOB_RECURSE
  SWIG_MODULE_Distortion_EXTRA_DEPS
  *.i
)

list(REMOVE_ITEM SWIG_MODULE_Distortion_EXTRA_DEPS ${ATK_PYTHON_DISTORTION_SWIG})

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_DISTORTION_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_DISTORTION_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(Distortion python ${ATK_PYTHON_DISTORTION_SWIG})
SWIG_LINK_LIBRARIES(Distortion ATKDistortion ${PYTHON_LIBRARIES})

SET(
    ATK_DISTORTION_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Distortion/Distortion.py
)

INSTALL(FILES ${ATK_DISTORTION_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Distortion
    )

INSTALL(TARGETS ${SWIG_MODULE_Distortion_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Distortion
    )

set_target_properties (${SWIG_MODULE_Distortion_REAL_NAME} PROPERTIES
    FOLDER Python
)
