
SET(
    ATK_PYTHON_DYNAMIC_SWIG
    main.i
)

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_DYNAMIC_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_DYNAMIC_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(Dynamic python ${ATK_PYTHON_DYNAMIC_SWIG})
SWIG_LINK_LIBRARIES(Dynamic ATKDynamic ${PYTHON_LIBRARIES})

SET(
    ATK_DYNAMIC_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Dynamic/Dynamic.py
)

INSTALL(FILES ${ATK_DYNAMIC_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Dynamic
    )

INSTALL(TARGETS ${SWIG_MODULE_Dynamic_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Dynamic
    )
