
SET(
    ATK_PYTHON_EQ_SWIG
    main.i
)

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_EQ_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_EQ_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(EQ python ${ATK_PYTHON_EQ_SWIG})
SWIG_LINK_LIBRARIES(EQ ATKEQ ${PYTHON_LIBRARIES})

SET(
    ATK_EQ_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/EQ/EQ.py
)

INSTALL(FILES ${ATK_EQ_PYTHON_SRC}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PYTHON_FOLDER}/site-packages/ATK/EQ
    )

INSTALL(TARGETS ${SWIG_MODULE_EQ_REAL_NAME}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${PYTHON_FOLDER}/site-packages/ATK/EQ
    )
