
SET(
    ATK_PYTHON_EQ_SWIG
    main.i
)

FILE(GLOB_RECURSE
  SWIG_MODULE_EQ_EXTRA_DEPS
  *.i
)

list(REMOVE_ITEM SWIG_MODULE_EQ_EXTRA_DEPS ${ATK_PYTHON_EQ_SWIG})

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_EQ_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_EQ_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(EQ python ${ATK_PYTHON_EQ_SWIG})
SWIG_LINK_LIBRARIES(EQ ATKEQ ATKUtility ${PYTHON_LIBRARIES})

SET(
    ATK_EQ_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/EQ/EQ.py
)

INSTALL(FILES ${ATK_EQ_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/EQ
    )

INSTALL(TARGETS ${SWIG_MODULE_EQ_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/EQ
    )

set_target_properties (${SWIG_MODULE_EQ_REAL_NAME} PROPERTIES
    FOLDER Python
)
