
FILE(GLOB_RECURSE
  PYTHON_MODULE_EQ_SRC
  *.cpp
)

FILE(GLOB_RECURSE
  PYTHON_MODULE_EQ_HEADERS
  *.h
)

include_directories(${PROJECT_SOURCE_DIR} ${NUMPY_INCLUDE_DIRS})

pybind11_add_module(PythonEQ MODULE ${PYTHON_MODULE_EQ_SRC} ${PYTHON_MODULE_EQ_HEADERS})
target_link_libraries(PythonEQ PRIVATE ATKCore ATKEQ)


INSTALL(FILES __init__.py
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/EQ
    )
INSTALL(TARGETS PythonEQ
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/EQ
    )

set_target_properties (PythonEQ PROPERTIES
    FOLDER Python
)
