
SET(
    ATK_PYTHON_IO_SWIG
    main.i
)

FILE(GLOB_RECURSE
  SWIG_MODULE_IO_EXTRA_DEPS
  *.i
)

list(REMOVE_ITEM SWIG_MODULE_IO_EXTRA_DEPS ${ATK_PYTHON_IO_SWIG})

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_IO_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_IO_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(IO python ${ATK_PYTHON_IO_SWIG})
SWIG_LINK_LIBRARIES(IO ATKIO ATKUtility ${PYTHON_LIBRARIES})

SET(
    ATK_IO_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/IO/IO.py
)

INSTALL(FILES ${ATK_IO_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/IO
    )

INSTALL(TARGETS ${SWIG_MODULE_IO_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/IO
    )

set_target_properties (${SWIG_MODULE_IO_REAL_NAME} PROPERTIES
    FOLDER Python
)
