
SET(
    ATK_PYTHON_PREAMPLIFIER_SWIG
    main.i
)

FILE(GLOB_RECURSE
  SWIG_MODULE_Preamplifier_EXTRA_DEPS
  *.i
)

list(REMOVE_ITEM SWIG_MODULE_Preamplifier_EXTRA_DEPS ${ATK_PYTHON_PREAMPLIFIER_SWIG})

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_PREAMPLIFIER_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_PREAMPLIFIER_SWIG} PROPERTIES SWIG_FLAGS "-includeall")

if(EIGEN_FOUND)
SWIG_ADD_MODULE(Preamplifier python ${ATK_PYTHON_PREAMPLIFIER_SWIG})
SWIG_LINK_LIBRARIES(Preamplifier ATKPreamplifier ATKUtility ${PYTHON_LIBRARIES})

SET(
    ATK_PREAMPLIFIER_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Preamplifier/Preamplifier.py
)

INSTALL(FILES ${ATK_PREAMPLIFIER_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Preamplifier
    )

INSTALL(TARGETS ${SWIG_MODULE_Preamplifier_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Preamplifier
    )

set_target_properties (${SWIG_MODULE_Preamplifier_REAL_NAME} PROPERTIES
    FOLDER Python
)
endif(EIGEN_FOUND)
