
SET(
    ATK_PYTHON_REVERBERATION_SWIG
    main.i
)

FILE(GLOB_RECURSE
  SWIG_MODULE_Reverberation_EXTRA_DEPS
  *.i
)

list(REMOVE_ITEM SWIG_MODULE_Reverberation_EXTRA_DEPS ${ATK_PYTHON_Reverberation_SWIG})

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_REVERBERATION_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_REVERBERATION_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(Reverberation python ${ATK_PYTHON_REVERBERATION_SWIG})
SWIG_LINK_LIBRARIES(Reverberation ATKDelay ${PYTHON_LIBRARIES})

SET(
    ATK_REVERBERATION_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Reverberation/Reverberation
)

INSTALL(FILES ${ATK_REVERBERATION_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Reverberation
    )

INSTALL(TARGETS ${SWIG_MODULE_Reverberation_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Reverberation
    )

set_target_properties (${SWIG_MODULE_Reverberation_REAL_NAME} PROPERTIES
    FOLDER Python
)
