
SET(
    ATK_PYTHON_SPECIAL_SWIG
    main.i
)

FILE(GLOB_RECURSE
  SWIG_MODULE_Special_EXTRA_DEPS
  *.i
)

list(REMOVE_ITEM SWIG_MODULE_Special_EXTRA_DEPS ${ATK_PYTHON_SPECIAL_SWIG})

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_SPECIAL_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_SPECIAL_SWIG} PROPERTIES SWIG_FLAGS "-includeall")

SWIG_ADD_LIBRARY(Special LANGUAGE python SOURCES ${ATK_PYTHON_SPECIAL_SWIG})
SWIG_LINK_LIBRARIES(Special ATKSpecial ATKUtility ${PYTHON_LIBRARIES})

SET(
    ATK_SPECIAL_PYTHON_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Special/Special.py
)

INSTALL(FILES ${ATK_SPECIAL_PYTHON_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Special
    )

INSTALL(TARGETS ${SWIG_MODULE_Special_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Special
    )

set_target_properties (${SWIG_MODULE_Special_REAL_NAME} PROPERTIES
    FOLDER Python
)
