
SET(
    ATK_PYTHON_Tools_SWIG
    main.i
)

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_Tools_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_Tools_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(Tools python ${ATK_PYTHON_Tools_SWIG})
SWIG_LINK_LIBRARIES(Tools ATKTools ${PYTHON_LIBRARIES})

SET(
    ATK_PYTHON_Tools_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Tools/Tools.py
)

INSTALL(FILES ${ATK_PYTHON_Tools_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Tools
    )

INSTALL(TARGETS ${SWIG_MODULE_Tools_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Tools
    )
