
SET(
    ATK_PYTHON_TOOLS_SWIG
    main.i
)

FILE(GLOB_RECURSE
  SWIG_MODULE_Tools_EXTRA_DEPS
  *.i
)

list(REMOVE_ITEM SWIG_MODULE_Tools_EXTRA_DEPS ${ATK_PYTHON_TOOLS_SWIG})

include_directories(${PROJECT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_TOOLS_SWIG} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${ATK_PYTHON_TOOLS_SWIG} PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(Tools python ${ATK_PYTHON_TOOLS_SWIG})
SWIG_LINK_LIBRARIES(Tools ATKTools ATKUtility ${PYTHON_LIBRARIES})

SET(
    ATK_PYTHON_Tools_SRC
    __init__.py ${PROJECT_BINARY_DIR}/Python/Tools/Tools.py
)

INSTALL(FILES ${ATK_PYTHON_Tools_SRC}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Tools
    )

INSTALL(TARGETS ${SWIG_MODULE_Tools_REAL_NAME}
    DESTINATION ${PYTHON_INSTALL_FOLDER}/site-packages/ATK/Tools
    )

set_target_properties (${SWIG_MODULE_Tools_REAL_NAME} PROPERTIES
    FOLDER Python
)
